genium/src/test/resources/smoke/errors/output/swift/ErrorsExtensions.swift
extension Errors.ExternalErrors : Error {
}

extension Errors.InternalError : Error {
}

extension SomeTypeCollectionError : Error {
}
